--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "material-velzon-thunk",
   "version": "3.0.0",
   "private": true,
+  "homepage": "https://keaganartfin.github.io/IPC",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
@@ -46,6 +47,7 @@
     "filepond-plugin-image-preview": "^4.6.12",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "gh-pages": "^6.1.1",
     "google-maps-react": "^2.0.6",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -110,7 +112,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
