--- a/package.json
+++ b/package.json
@@ -128,6 +128,10 @@
       "last 1 safari version"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/keaganartfin/IPC.git"
+  },
   "resolutions": {
     "moment": "2.29.1",
     "autoprefixer": "10.4.5"
